// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectfieldWrapper snapshots tests renders SelectField component 1`] = `
<Fragment>
  <WithStyles(FormControl)
    error={false}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(InputLabel) />
    <WithStyles(Select)
      autoWidth={true}
      error={false}
      floatingLabelText="This is a test selectfield component"
      fullWidth={true}
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
  </WithStyles(FormControl)>
</Fragment>
`;

exports[`SelectfieldWrapper snapshots tests renders an error 1`] = `
<Fragment>
  <WithStyles(FormControl)
    error={true}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(InputLabel) />
    <WithStyles(Select)
      autoWidth={true}
      error={true}
      floatingLabelText="test selectfield component"
      fullWidth={true}
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
    <WithStyles(FormHelperText)>
      Something bad happened
    </WithStyles(FormHelperText)>
  </WithStyles(FormControl)>
</Fragment>
`;
